<resources>
    <string name="app_name">LISTA DE TAREAS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Empezar</string>
    <string name="creationTask">Creación de tarea</string>
    <string name="nameTask">Nombre de la Tarea</string>
    <string name="date">Fecha</string>
    <string name="taskDescription">Descripción de la tarea</string>
    <string name="task">Tarea...</string>
    <string name="addTask">Añadir Tarea</string>
    <string name="createTask">Crear Tarea</string>
    <string name="home">Home</string>
    <string name="calendar">Calendario</string>
    <string name="tasks">Tareas</string>
    <string name="addtasks">Añadir Tareas</string>
    <string name="clearDB">Borrar BD</string>
</resources>