<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="30dp"
        android:padding="10dp"
        android:layout_marginTop="125dp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/reloj"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_gravity="end"
        android:layout_marginTop="80dp"
        android:layout_marginRight="35dp"/>

    <Button
        android:id="@+id/clearDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearDB"
        android:layout_gravity="right"
        android:layout_marginTop="50dp"
        android:layout_marginRight="35dp"/>
</LinearLayout>