<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/gris"
    android:layout_weight="1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createTask"
        android:padding="60dp"
        android:layout_marginBottom="50dp"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"></TextView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/nameTask"
            android:layout_marginBottom="30dp"
            android:textStyle="bold"
            android:textSize="22dp">

        </EditText>
        </ScrollView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="18dp"
                ></TextView>
            <EditText
                android:id="@+id/taskDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="xx/xx/xx"
                android:maxLength="10"
                android:digits=""
                android:inputType="number">
            </EditText>
            <Button
                android:id="@+id/taskDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginLeft="15dp"
                android:textSize="12dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="65dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taskDescription"
                android:textSize="18dp"
                android:layout_marginBottom="15dp"
                ></TextView>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                android:id="@+id/taskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task">
            </EditText>
            </ScrollView>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="200dp"
        >
        <Button
            android:id="@+id/btn_addTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addTask"

            />

    </LinearLayout>

</LinearLayout>
